objects/BMX_Generic_Report__c.object
<CustomObject>
    <fields>
        <fullName>BMX_Approve_Done_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approve Done By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Generic_Reports3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Approve_Done_On__c</fullName>
        <label>Approve Done On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Approved_Date__c</fullName>
        <label>Approved Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Authorised_Rep_Address__c</fullName>
        <label>Authorised Rep Address</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMX_Authorised_Rep_City__c</fullName>
        <label>Authorised Rep City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Authorised_Rep_Contact__c</fullName>
        <label>Authorised Rep Contact name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Authorised_Rep_Country__c</fullName>
        <label>Authorised Rep Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Authorised_Rep_Email__c</fullName>
        <label>Authorised Rep Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BMX_Authorised_Rep_Fax__c</fullName>
        <label>Authorised Rep Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BMX_Authorised_Rep_Name__c</fullName>
        <description>Name of Authorised Representative</description>
        <label>Authorised Rep Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Authorised_Rep_Phone__c</fullName>
        <label>Authorised Rep Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BMX_Authorised_Rep_Postcode__c</fullName>
        <label>Authorised Rep Postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Cancel_Done_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cancel Done By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Generic_Reports1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Cancel_Done_On__c</fullName>
        <label>Cancel Done On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Catalogue_number__c</fullName>
        <label>Catalogue number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Classification_of_incident__c</fullName>
        <label>Classification of incident</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Death</fullName>
                </value>
                <value>
                    <fullName>Unanticipated serious deterioration in state of health</fullName>
                </value>
                <value>
                    <fullName>All other reportable incidents</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMX_Close_Date__c</fullName>
        <label>Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Close_Not_Locally_Reporting_Done_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Close - Not Locally Reporting Done By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Generic_Reports4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Close_Not_Locally_Reporting_Done_On__c</fullName>
        <label>Close - Not Locally Reporting Done On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Close_Report_Done_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Close Report Done By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Generic_Reports6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Close_Report_Done_On__c</fullName>
        <label>Close Report Done On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Comments__c</fullName>
        <label>Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMX_Commercial_name_brand_name_make__c</fullName>
        <label>Commercial name / brand name / make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Competent_Authority__c</fullName>
        <formula>BMX_Country__r.BMX_Competent_Authority__c</formula>
        <label>Competent Authority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Contact_person_within_the_facility__c</fullName>
        <label>Contact person within the facility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Country_Name__c</fullName>
        <formula>BMX_Country__r.CMPL123CME__Name__c</formula>
        <label>Reportable Country Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reportable Country</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Error : Select the Country</errorMessage>
            <filterItems>
                <field>CMPL123CME__Complaint_Code__c.CMPL123CME__Type__c</field>
                <operation>equals</operation>
                <value>COUNTRY CODE</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123CME__Complaint_Code__c</referenceTo>
        <relationshipLabel>Generic Reports</relationshipLabel>
        <relationshipName>Generic_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Date_Submitted__c</fullName>
        <label>Date Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMX_Date_of_Submission__c</fullName>
        <label>Date of Submission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMX_Date_of_this_report__c</fullName>
        <label>Date of this report</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMX_Date_the_incident_occurred__c</fullName>
        <label>Date the incident occurred</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMX_Days_in_Pending_Response__c</fullName>
        <formula>MFLOOR(NOW()- BMX_Pending_Response_From__c)</formula>
        <label>Days in Pending Response</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMX_Device_manufacturing_date__c</fullName>
        <label>Device manufacturing date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMX_Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMX_Expected_date_of_next_report__c</fullName>
        <label>Expected date of next report</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMX_Expiry_date__c</fullName>
        <label>Expiry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMX_Healthcare_Facility_Address__c</fullName>
        <label>Healthcare Facility Address</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMX_Healthcare_Facility_City__c</fullName>
        <label>Healthcare Facility City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Healthcare_Facility_Country__c</fullName>
        <label>Healthcare Facility Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Healthcare_Facility_Email__c</fullName>
        <label>Healthcare Facility Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BMX_Healthcare_Facility_Fax__c</fullName>
        <label>Healthcare Facility Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BMX_Healthcare_Facility_Phone__c</fullName>
        <label>Healthcare Facility Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BMX_Healthcare_Facility_Postcode__c</fullName>
        <label>Healthcare Facility Postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Incident_description_narrative__c</fullName>
        <label>Incident description narrative</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMX_Incident_repst_serious_public_threat__c</fullName>
        <label>Incident represent serious public threat</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMX_Local_Assessment_Decision__c</fullName>
        <description>US-AER-047</description>
        <formula>If(Local_Assessment__r.RecordType.DeveloperName = 'Local_Assessment', TEXT(Local_Assessment__r.BMX_Is_Reportable__c) , '' )</formula>
        <label>Local Assessment Decision</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Local_Subsidiary_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local Subsidiary Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Generic_Reports7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Local_Subsidiary_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local Subsidiary Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Generic_Reports8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Manufacturer_Address__c</fullName>
        <label>Manufacturer Address</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMX_Manufacturer_City__c</fullName>
        <label>Manufacturer City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Manufacturer_Contact_name__c</fullName>
        <label>Manufacturer Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Manufacturer_Country__c</fullName>
        <label>Manufacturer Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Manufacturer_Email__c</fullName>
        <label>Manufacturer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BMX_Manufacturer_Fax__c</fullName>
        <label>Manufacturer Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BMX_Manufacturer_Name__c</fullName>
        <label>Manufacturer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Manufacturer_Phone__c</fullName>
        <label>Manufacturer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BMX_Manufacturer_Postcode__c</fullName>
        <label>Manufacturer Postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Manufacturers_awareness_date__c</fullName>
        <label>Manufacturers awareness date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BMX_Manufacturers_device_analysis_result__c</fullName>
        <label>Manufacturer’s device analysis result</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMX_Manufacturers_preliminary_analysis__c</fullName>
        <label>Manufacturer’s preliminary analysis</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMX_Model_number__c</fullName>
        <defaultValue>"Not Applicable"</defaultValue>
        <label>Model number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Number_of_patients_involved_if_known__c</fullName>
        <label>Number of patients involved (if known)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Patient_info_if_available__c</fullName>
        <description>Patient information if available</description>
        <inlineHelpText>Patient information if available</inlineHelpText>
        <label>Patient information if available</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMX_Patient_outcome__c</fullName>
        <label>Patient outcome</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMX_Pending_Response_From__c</fullName>
        <formula>IF( CMPL123_WF_Status__c ='Pending Response',CMPL123_WF_Action_Performed_On__c, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pending Response From</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Recipient_Address__c</fullName>
        <label>Recipient Address</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMX_Reference_number_assigned_by_NCA__c</fullName>
        <label>Reference number assigned by NCA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Reference_number_by_manufacturer__c</fullName>
        <label>Reference number by manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Rework_Done_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rework Done By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Generic_Reports2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Rework_Done_On__c</fullName>
        <label>Rework Done On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Serial_number_s_if_applicable__c</fullName>
        <label>Serial number(s) (if applicable)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Software_version_nub_if_applicable__c</fullName>
        <label>Software version number (if applicable)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Submit_Report_Done_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submit Report Done By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Generic_Reports5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Submit_Report_Done_On__c</fullName>
        <label>Submit Report Done On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Submit_for_Review_Done_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submit for Review Done By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Generic_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMX_Submit_for_Review_Done_On__c</fullName>
        <label>Submit for Review Done On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>BMX_Submitter_Address__c</fullName>
        <label>Submitter Address</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BMX_Submitter_City__c</fullName>
        <label>Submitter City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Submitter_Contact_name__c</fullName>
        <label>Submitter Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Submitter_Country__c</fullName>
        <label>Submitter Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Submitter_Email__c</fullName>
        <label>Submitter Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BMX_Submitter_Fax__c</fullName>
        <label>Submitter Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BMX_Submitter_Phone__c</fullName>
        <label>Submitter Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BMX_Submitter_Postcode__c</fullName>
        <label>Submitter Postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Submitter_s_name__c</fullName>
        <label>Submitter’s name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Time_to_Notify_the_CA__c</fullName>
        <formula>IF( ISBLANK(BMX_Approved_Date__c), '',
TEXT(DATEVALUE(BMX_Approved_Date__c) - Complaint__r.BMX_Customer_Contact_Date__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time to Notify the CA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_Type__c</fullName>
        <label>Type of report</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initial report</fullName>
                </value>
                <value>
                    <fullName>Follow-up report</fullName>
                </value>
                <value>
                    <fullName>Final report</fullName>
                </value>
                <value>
                    <fullName>Combined initial &amp; final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMX_UDI_number__c</fullName>
        <label>UDI number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMX_lot_batch_number_s_if_applicable__c</fullName>
        <label>lot/batch number(s) (if applicable)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123Rule_Key_Value__c</fullName>
        <label>Rule Field Update Key Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123Task_Key_Value__c</fullName>
        <label>Task Field Update Key Value</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action_Performed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Workflow Action Performed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>GenericcCMPL123_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action_Performed_On__c</fullName>
        <label>Workflow Action Performed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Action__c</fullName>
        <label>Workflow Action</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123_WF_Status__c</fullName>
        <label>Workflow Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Complaint</label>
        <referenceTo>CMPL123CME__Complaint__c</referenceTo>
        <relationshipLabel>Generic Reports</relationshipLabel>
        <relationshipName>Generic_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Local_Assessment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Local Assessment</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CMPL123CME__Questionnaire__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Local Assessment</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CMPL123CME__Questionnaire__c</referenceTo>
        <relationshipLabel>Generic Reports</relationshipLabel>
        <relationshipName>Generic_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Local_Subsidiary_Text__c</fullName>
        <label>Local Subsidiary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_of_the_health_care_facility__c</fullName>
        <label>Name of the health care facility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remedial_action_to_care_for_patient__c</fullName>
        <description>Remedial action taken by the healthcare facility relevant to the care of the patient</description>
        <inlineHelpText>Remedial action taken by the healthcare facility relevant to the care of the patient</inlineHelpText>
        <label>Remedial action to care for patient</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Generic Report</label>
    <nameField>
        <displayFormat>GR-{00000}</displayFormat>
        <label>Generic Report #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Generic Reports</pluralLabel>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CMPL123_WF_Action__c</columns>
        <columns>CMPL123_WF_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>BMX_Lock_Generic_Report</fullName>
        <active>true</active>
        <label>Lock Generic Report</label>
    </recordTypes>
    <validationRules>
        <fullName>Prevent_Creation_or_Edit_of_Generic_Rep</fullName>
        <active>true</active>
        <description>Cannot create/edit  a new Generic Report  from the Complaint record at any time when the Complaint record is Locked.</description>
        <errorConditionFormula>OR( 
AND(ISNEW(),
Complaint__r.CMPL123CME__CMPL123_WF_Status__c ='Closed'), 
Complaint__r.CMPL123CME__CMPL123_WF_Status__c ='Closed'
)</errorConditionFormula>
        <errorMessage>Cannot create/edit a Generic Report for closed Complaint</errorMessage>
    </validationRules>
</CustomObject>